[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "asgi-framework"
version = "0.1.0"
description = "A simple ASGI framework with named routes"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["asgi_framework*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    ".",
]
python_files = [
    "test_*.py",
    "*_test.py",
]