[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "artanis"
dynamic = ["version"]
description = "A simple, yet fast, Python framework with named routes"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "nordxai"},
]
keywords = ["asgi", "web", "framework", "async", "routes"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
"Homepage" = "https://github.com/nordxai/artanis"
"Bug Reports" = "https://github.com/nordxai/artanis/issues"
"Source" = "https://github.com/nordxai/artanis"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["artanis*"]

[tool.setuptools.dynamic]
version = {attr = "artanis._version.__version__"}

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    ".",
]
python_files = [
    "test_*.py",
    "*_test.py",
]