[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "artanis"
dynamic = ["version"]
description = "A simple, yet fast, Python framework with named routes"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Asep Norzai", email = "nordxai@gmail.com"},
]
maintainers = [
    {name = "Asep Norzai", email = "nordxai@gmail.com"},
]
keywords = [
    "asgi",
    "web",
    "framework", 
    "async",
    "routes",
    "middleware",
    "logging",
    "express",
    "python",
    "http",
    "api",
    "rest",
    "enterprise",
    "professional"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
    "Typing :: Typed"
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
"Homepage" = "https://github.com/nordxai/artanis"
"Repository" = "https://github.com/nordxai/artanis"
"Bug Reports" = "https://github.com/nordxai/artanis/issues"
"Source Code" = "https://github.com/nordxai/artanis"
"Issues" = "https://github.com/nordxai/artanis/issues"
"Changelog" = "https://github.com/nordxai/artanis/releases"
"Discussions" = "https://github.com/nordxai/artanis/discussions"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=1.0.0",
    "pre-commit>=2.20.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=3.0.0",
    "coverage>=6.0.0",
]
all = [
    "artanis[dev,test]",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["artanis*"]

[tool.setuptools.dynamic]
version = {attr = "artanis._version.__version__"}

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
addopts = [
    "--strict-markers",
    "--disable-warnings",
    "-ra",
]

[tool.coverage.run]
source = ["src/artanis"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["artanis"]

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false